--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -680,31 +680,32 @@ styles:
 
     building-grid:
         base: polygons
+        lighting: vertex
         mix: [hsv, scale-buildings]
         texcoords: true
-        material:
-            diffuse:
-                texture: building-grid
-                mapping: uv
         shaders:
+            uniforms:
+                u_tex_grid: building-grid
             defines:
                 WALL_TINT: vec3(1., 3., .800) # modifies roof color HSV
             blocks:
-                filter: |
+                # applied in vertex shader when using vertex lighting
+                color: |
                     if (dot(vec3(0., 0., 1.), worldNormal()) < 1.0 - TANGRAM_EPSILON) {
                         // If it's a wall
-                        vec3 wall = hsv2rgb(
-                            rgb2hsv(v_color.rgb) * WALL_TINT
-                        );
-                        color.rgb = mix(color.rgb, wall, 1. - color.a);
-
-                        // turn wall opaque, alpha was used to blend w/wall color,
-                        // but we don't want the wall itself to be transparent
-                        color.a = 1.;
+                        color.rgb = hsv2rgb(rgb2hsv(color.rgb) * WALL_TINT);
+                        color.a = 1.0;
                     } else {
                         // it's a roof, use vertex color without texture
-                        color = v_color;
+                        // using color alpha to differentiate roof/wall
+                        color.a = 0.0;
                     }
+                # applied in fragment shader
+                filter: |
+                    // if it's roof then use original color (since color.a == 0)
+                    color.rgb = mix(v_color.rgb, vec3(0.),
+                                    color.a * texture2D(u_tex_grid, v_texcoord).a);
+                    color.a = 1.0;
 
     # building-grid-univ:
     #     mix: building-grid
